force-app/main/default/objects/Directive_Outcome__c/Directive_Outcome__c.object-meta.xml
<CustomObject>
    <description>Directive Outcome</description>
    <label>Outcome</label>
    <nameField>
        <displayFormat>OUT-{0000000}</displayFormat>
        <label>Outcome Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>