force-app/main/default/objects/Directive_Outcome__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <label>Business Value</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>