force-app/main/default/objects/Directive_Outcome__c/fields/Measured_At__c.field-meta.xml
<CustomField>
    <fullName>Measured_At__c</fullName>
    <label>Measured At</label>
    <type>DateTime</type>
</CustomField>