force-app/main/default/objects/Directive_Outcome__c/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Case_Closed</fullName><default>false</default><label>Case_Closed</label></value>
            <value><fullName>Customer_Responded</fullName><default>false</default><label>Customer_Responded</label></value>
            <value><fullName>Risk_Decreased</fullName><default>false</default><label>Risk_Decreased</label></value>
            <value><fullName>Approval_Completed</fullName><default>false</default><label>Approval_Completed</label></value>
            <value><fullName>Duplicate_Resolved</fullName><default>false</default><label>Duplicate_Resolved</label></value>
            <value><fullName>Ineffective</fullName><default>false</default><label>Ineffective</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>